--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+  background: rgba(25,22,71,.5);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
